# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  getting_started_coordinate_systems.cpp  getting_started_shader.cpp  getting_started_textures_combined.cpp  main.cpp  tutorial02_red_triangle.cpp
advanced_opengl/stencil_testing/: stencil_testing.cpp
getting_started/camera_class/: getting_started_camera_class.cpp
getting_started/coordinate_systems/: getting_started_coordinate_systems.cpp
getting_started/red_triangle/: tutorial02_red_triangle.cpp
getting_started/shader/: getting_started_shader.cpp
getting_started/textures_combined/: getting_started_textures_combined.cpp
getting_started/transformation/: getting_started_transformation.cpp
gles/android/: README.md
gles/android/app/: build.gradle
gles/android/app/src/androidTest/java/com/lbh/lesson/gles/: ExampleInstrumentedTest.java
gles/android/app/src/main/: AndroidManifest.xml
gles/android/app/src/main/java/com/lbh/lesson/gles/: MainActivity.java
gles/android/app/src/main/java/com/lbh/lesson/gles/lesson1/: TriangleActivity.java  TriangleRender.java
gles/android/app/src/main/java/com/lbh/lesson/gles/lesson2/: TextureActivity.java  TextureRender.java
gles/android/app/src/main/java/com/lbh/lesson/gles/lesson3/: CoordinateSystemsActivity.java  CoordinateSystemsRender.java  ModelTransitionActivity.java  ModelTransitionRender.java
gles/android/app/src/main/java/com/lbh/lesson/gles/util/: CoordinateUtil.java  ImageUtil.java  OpenGLUtil.java
gles/android/app/src/main/res/layout/: activity_main.xml  activity_triangle.xml
gles/android/app/src/main/res/values/: strings.xml
gles/android/app/src/test/java/com/lbh/lesson/gles/: ExampleUnitTest.java
gles/android/gradle/wrapper/: gradle-wrapper.properties
include/: camera.h  mesh.h  model.h  shader_s.h
lighting/basic_lighting_specular/: basic_lighting_specular.cpp  lighting_fragment_basic_lighting_specular.glsl
lighting/casters_spot_soft/: lighting_casters_spot_soft.cpp  lighting_fragment_casters_spot_soft.glsl  lighting_vertex_casters_spot_soft.glsl
lighting/colors/: lighting_colors.cpp
lighting/lighting_maps_specular_map/: lighting_fragment_lighting_maps_specular_map.glsl  lighting_lighting_maps_specular_map.cpp
lighting/materials/: lighting_fragment_materials.glsl  lighting_materials.cpp  lighting_vertex_materials.glsl
lighting/multiple_lights/: lighting_fragment_multiple_lights.glsl  lighting_multiple_lights.cpp
model_loading/: model_loading.cpp
tesselation_shader/: demo_tesselation_shader.cpp
